# python-veolia-api

./: pyproject.toml
pyolia/: client.py
pyolia/clients/: eau_services_client.py
