[tool.poetry]
name = "pyolia"
version = "0.4.4"
description = "Async Python wrapper to interact with internal Veolia API"
authors = ["Thibaut Etienne"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tetienne/python-veolia-api/"
repository = "https://github.com/tetienne/python-veolia-api/"
packages = [
    { include = "pyolia" }
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
aiohttp = ">=3.8.1"
backoff = "^2.2.1"

[tool.poetry.dev-dependencies]
tox = "^4.3.4"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pre-commit = "^3.0.2"
black = "^22.12.0"
pylint = "^2.15.10"
isort = "^5.11.4"
mypy = "^0.991"
flake8 = "^6.0.0"
pyupgrade = "^3.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
